# AI-for-Set-Operations

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  ML Benchmarks.ipynb  Machine Learning.ipynb  README.md  file_loader.h  main.cpp  time_lapse.h
Machine Learning/: ML Benchmarks.ipynb  Machine Learning.ipynb  Test overfitting-data.ipynb
results/Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz/census-income/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz/uscensus2000/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz/weather_sept_85/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz/wikileaks-noquotes/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/census-income/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/census1881_srt/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/uscensus2000/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/weather_sept_85/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Core(TM) i7-8700 CPU @ 3.20GHz/wikileaks-noquotes/: Intersect_card_dataset.csv  Intersect_dataset.csv
results/Intel(R) Xeon Phi(TM) CPU 7210 @ 1.30GHz/census-income/: Intersect_card_dataset.csv  (+1 more)
(+6 files in other folders)
